change git name

--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://gyubin-code.github.io/movie_app/"
+  "homepage": "https://zzbeen.github.io/movie_app/"
 }
